# focus-bootstrap

./: .gitignore  .lintstagedrc.js  README.md  docker-compose.yml  package-lock.json  package.json
.devcontainer/: devcontainer.json
.husky/: pre-commit
api/: Dockerfile  Makefile  README.md  openapi.yaml  pyproject.toml
api/focus_api/controllers/: health.py  response.py
api/focus_api/utils/: pydantic.py
api/focus_api/utils/logging/: formatters.py
api/opr_api/: README.md  __main__.py  app.py  handlers.py
api/opr_api/controllers/: health.py
api/opr_api/db/: __init__.py  config.py  handle_error.py
api/opr_api/models/: base.py
api/opr_api/utils/logging/: __init__.py  network.py
api/tests/: conftest.py
api/tests/controllers/: test_health.py
client/: Dockerfile  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json
client/src/app/: layout.tsx
docs/: README.md
docs/architecture_decision_records/: README.md  adr-001-technical-stack.md  adr-002-mocking-external-apis.md
infrastructure/: README.md
infrastructure/mocks/: README.md
infrastructure/mocks/imposter/: eligibility-config.yaml.bak  photo-config.yaml.bak  tgs-config.yaml.bak  usps-config.yaml
